# scriptflow

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  start.sh
.github/workflows/: ci.yml
app/: database.py  github.py  log_utils.py  main.py  models.py  notifications.py  process_manager.py  scheduler.py  schemas.py  telegram_bot.py  uv_manager.py
app/routers/: jobs.py  logs.py  pages.py  repos.py  settings.py  validate.py  wizard.py
app/static/: app.js  style.css
app/templates/: base.html  dashboard.html  log_viewer.html  settings.html  wizard.html
tests/: conftest.py  test_cron_validation.py  test_github.py  test_log_utils.py  test_models.py  test_notifications.py  test_process_manager.py  test_routers_jobs.py  test_routers_logs.py  test_routers_repos.py  test_routers_wizard.py  test_scheduler.py  test_smoke.py  test_startup_recovery.py  test_telegram_bot.py  test_telegram_scheduler.py  test_uv_manager.py  test_validate.py
